grille bootstrap code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,63 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">nav header</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6 offset-xl-3">intro</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+        <div class="col-12 col-xl-3">nav</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6 offset-xl-3">régime alimentaire</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">France A</div>
+        <div class="col-12 col-xl-6">France B</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">JaponA</div>
+        <div class="col-12 col-xl-6">JaponB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">EthiopieA</div>
+        <div class="col-12 col-xl-6">EthiopieB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">GrèceA</div>
+        <div class="col-12 col-xl-6">GrèceB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">MexiqueA</div>
+        <div class="col-12 col-xl-6">MexiqueB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">LibanA</div>
+        <div class="col-12 col-xl-6">LibanB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">MarocA</div>
+        <div class="col-12 col-xl-6">MarocB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">IndeA</div>
+        <div class="col-12 col-xl-6">IndeB</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">Réservation</div>
+        <div class="col-12 col-xl-6">Contact</div>
+        <div class="col-2 offset-5">Credit</div>
+      </div>
+    </div>
   </body>
 </html>
