--- a/index.html
+++ b/index.html
@@ -29,36 +29,44 @@
         <div class="col-12 col-xl-6 offset-xl-3">régime alimentaire</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">France A</div>
-        <div class="col-12 col-xl-6">France B</div>
+        <div class="col-12">France title</div>
+        <div class="col-12">France button</div>
+        <div class="col-12">France text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">JaponA</div>
-        <div class="col-12 col-xl-6">JaponB</div>
+        <div class="col-12">Japon title</div>
+        <div class="col-12">Japon button</div>
+        <div class="col-12">Japon text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">EthiopieA</div>
-        <div class="col-12 col-xl-6">EthiopieB</div>
+        <div class="col-12">Ethiopie title</div>
+        <div class="col-12">Ethiopie button</div>
+        <div class="col-12">Ethiopie text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">GrèceA</div>
-        <div class="col-12 col-xl-6">GrèceB</div>
+        <div class="col-12">Grèce title</div>
+        <div class="col-12">Grèce button</div>
+        <div class="col-12">Grèce text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">MexiqueA</div>
-        <div class="col-12 col-xl-6">MexiqueB</div>
+        <div class="col-12">Mexique title</div>
+        <div class="col-12">Mexique button</div>
+        <div class="col-12">Mexique text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">LibanA</div>
-        <div class="col-12 col-xl-6">LibanB</div>
+        <div class="col-12">Liban title</div>
+        <div class="col-12">Liban button</div>
+        <div class="col-12">Liban text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">MarocA</div>
-        <div class="col-12 col-xl-6">MarocB</div>
+        <div class="col-12">Maroc title</div>
+        <div class="col-12">Maroc button</div>
+        <div class="col-12">Maroc text</div>
       </div>
       <div class="row">
-        <div class="col-12 col-xl-6">IndeA</div>
-        <div class="col-12 col-xl-6">IndeB</div>
+        <div class="col-12">Inde title</div>
+        <div class="col-12">Inde button</div>
+        <div class="col-12">Inde text</div>
       </div>
       <div class="row">
         <div class="col-12 col-xl-6">Réservation</div>
