add header main and footer

--- a/index.html
+++ b/index.html
@@ -9,70 +9,76 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-12">nav header</div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-xl-6 offset-xl-3">intro</div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-        <div class="col-12 col-xl-3">nav</div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-xl-6 offset-xl-3">régime alimentaire</div>
-      </div>
-      <div class="row">
-        <div class="col-12">France title</div>
-        <div class="col-12">France button</div>
-        <div class="col-12">France text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Japon title</div>
-        <div class="col-12">Japon button</div>
-        <div class="col-12">Japon text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Ethiopie title</div>
-        <div class="col-12">Ethiopie button</div>
-        <div class="col-12">Ethiopie text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Grèce title</div>
-        <div class="col-12">Grèce button</div>
-        <div class="col-12">Grèce text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Mexique title</div>
-        <div class="col-12">Mexique button</div>
-        <div class="col-12">Mexique text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Liban title</div>
-        <div class="col-12">Liban button</div>
-        <div class="col-12">Liban text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Maroc title</div>
-        <div class="col-12">Maroc button</div>
-        <div class="col-12">Maroc text</div>
-      </div>
-      <div class="row">
-        <div class="col-12">Inde title</div>
-        <div class="col-12">Inde button</div>
-        <div class="col-12">Inde text</div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-xl-6">Réservation</div>
-        <div class="col-12 col-xl-6">Contact</div>
-        <div class="col-2 offset-5">Credit</div>
-      </div>
+      <header>
+        <div class="row">
+          <div class="col-12">nav header</div>
+        </div>
+      </header>
+      <main>
+        <div class="row">
+          <div class="col-12 col-xl-6 offset-xl-3">intro</div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+          <div class="col-12 col-xl-3">nav</div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-xl-6 offset-xl-3">régime alimentaire</div>
+        </div>
+        <div class="row">
+          <div class="col-12">France title</div>
+          <div class="col-12">France button</div>
+          <div class="col-12">France text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Japon title</div>
+          <div class="col-12">Japon button</div>
+          <div class="col-12">Japon text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Ethiopie title</div>
+          <div class="col-12">Ethiopie button</div>
+          <div class="col-12">Ethiopie text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Grèce title</div>
+          <div class="col-12">Grèce button</div>
+          <div class="col-12">Grèce text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Mexique title</div>
+          <div class="col-12">Mexique button</div>
+          <div class="col-12">Mexique text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Liban title</div>
+          <div class="col-12">Liban button</div>
+          <div class="col-12">Liban text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Maroc title</div>
+          <div class="col-12">Maroc button</div>
+          <div class="col-12">Maroc text</div>
+        </div>
+        <div class="row">
+          <div class="col-12">Inde title</div>
+          <div class="col-12">Inde button</div>
+          <div class="col-12">Inde text</div>
+        </div>
+      </main>
+      <footer>
+        <div class="row">
+          <div class="col-12 col-xl-6">Réservation</div>
+          <div class="col-12 col-xl-6">Contact</div>
+          <div class="col-2 offset-5">Credit</div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
