--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <div class="container">
       <header>
         <div class="row">
-          <div class="col-12">nav header</div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col-12 col-xl-6 offset-xl-3">
+                <div class="navigation">
+                  <a href="">Acceuil</a><a href="">Cartes</a
+                  ><a href="">Acceuil</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </header>
       <main>
