--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ggr3atf.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ggr3atf.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="row">
-          <div class="col-12">
-            <div class="row">
-              <div class="col-12 col-xl-6 offset-xl-3">
-                <div class="navigation">
-                  <a href="">Acceuil</a><a href="">Cartes</a
-                  ><a href="">Acceuil</a>
-                </div>
+    <header>
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+              <div class="navigation">
+                <a href="">Acceuil</a><a href="">Cartes</a
+                ><a href="">Acceuil</a>
               </div>
             </div>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
+    <div class="container">
       <main>
         <div class="row">
           <div class="col-12 col-xl-6 offset-xl-3">intro</div>
