--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3">
               <div class="navigation">
-                <a href="">Acceuil</a><a href="">Cartes</a
-                ><a href="">Acceuil</a>
+                <a href="">Accueil</a><a href="">Cartes</a
+                ><a href="">Contact</a>
               </div>
             </div>
           </div>
@@ -26,21 +26,80 @@
     </header>
     <div class="container">
       <main>
-        <div class="row">
-          <div class="col-12 col-xl-6 offset-xl-3">intro</div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-          <div class="col-12 col-xl-3">nav</div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-xl-6 offset-xl-3">régime alimentaire</div>
+        <div class="intro">
+          <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+              <h1>TerreMere</h1>
+              <p>
+                Ce restaurant offre une aventure gastronomique préparée par une
+                équipe de chefs talentueux, qui offre une immersion totale dans
+                la diversité culinaire mondiale. Venez goûter le monde en une
+                seule destination, incluant tous les régimes alimentaires.
+              </p>
+            </div>
+          </div>
+          <div class="nav">
+            <div class="row">
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/france/french-nav.jpg"
+                  alt="picture of a dish from France"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/japon/japanese-nav.jpeg"
+                  alt="picture of a dish from Japan"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/éthiopie/ethiopian-nav.jpeg"
+                  alt="picture of a dish from Ethiopia"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/grèce/greek-nav.jpg"
+                  alt="picture of a dish from Greece"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/mexique/mexican-nav.jpg"
+                  alt="picture of a dish from Mexico"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/liban/libanese-nav.jpg"
+                  alt="picture of a dish from Lebanon"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/maroc/moroccan-nav.jpg"
+                  alt="picture of a dish from Morocco"
+                />
+              </div>
+              <div class="col-12 col-xl-3">
+                <img
+                  src="img/inde/indian-nav.jpg"
+                  alt="picture of a dish from India"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+              <p>
+                Nos menus contiennent aussi des plats végétariens et végans. En
+                cas d’allergies ou de régime alimentaire particulier nous vous
+                informons volontiers et feront de notre mieux pour adapter nos
+                mets.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="row">
           <div class="col-12">France title</div>
