--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-12">
           <div class="row">
-            <div class="col-12 col-xl-6 offset-xl-3">
+            <div class="col-12 col-lg-6 offset-lg-3">
               <div class="navigation">
                 <a href="">Accueil</a><a href="">Cartes</a
                 ><a href="">Contact</a>
@@ -28,7 +28,7 @@
       <main>
         <div class="intro">
           <div class="row">
-            <div class="col-12 col-xl-6 offset-xl-3">
+            <div class="col-12 col-lg-6 offset-lg-3">
               <h1>TerreMere</h1>
               <p>
                 Ce restaurant offre une aventure gastronomique préparée par une
@@ -40,49 +40,52 @@
           </div>
           <div class="nav">
             <div class="row">
-              <div class="col-12 col-xl-3">
-                <img
-                  src="img/france/french-nav.jpg"
-                  alt="picture of a dish from France"
-                />
+              <div class="col-12 col-lg-3">
+                <div class="country">
+                  <img
+                    src="img/france/french-nav.jpg"
+                    alt="picture of a dish from France"
+                  />
+                  <div class="country-title">France</div>
+                </div>
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/japon/japanese-nav.jpeg"
                   alt="picture of a dish from Japan"
                 />
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/éthiopie/ethiopian-nav.jpeg"
                   alt="picture of a dish from Ethiopia"
                 />
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/grèce/greek-nav.jpg"
                   alt="picture of a dish from Greece"
                 />
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/mexique/mexican-nav.jpg"
                   alt="picture of a dish from Mexico"
                 />
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/liban/libanese-nav.jpg"
                   alt="picture of a dish from Lebanon"
                 />
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/maroc/moroccan-nav.jpg"
                   alt="picture of a dish from Morocco"
                 />
               </div>
-              <div class="col-12 col-xl-3">
+              <div class="col-12 col-lg-3">
                 <img
                   src="img/inde/indian-nav.jpg"
                   alt="picture of a dish from India"
@@ -91,7 +94,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-xl-6 offset-xl-3">
+            <div class="col-12 col-lg-6 offset-lg-3">
               <p>
                 Nos menus contiennent aussi des plats végétariens et végans. En
                 cas d’allergies ou de régime alimentaire particulier nous vous
@@ -144,9 +147,9 @@
       </main>
       <footer>
         <div class="row">
-          <div class="col-12 col-xl-6">Réservation</div>
-          <div class="col-12 col-xl-6">Contact</div>
-          <div class="col-2 offset-5">Credit</div>
+          <div class="col-12 col-lg-6">Réservation</div>
+          <div class="col-12 col-lg-6 order-lg-1">Contact</div>
+          <div class="col-2 offset-5 order-lg- 2">Credit</div>
         </div>
       </footer>
     </div>
