all nav and intro p col corrected

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-12">
           <div class="row">
-            <div class="col-12 col-lg-6 offset-lg-3">
+            <div class="col-12 col-md-6 offset-md-3">
               <div class="navigation">
                 <a href="">Accueil</a><a href="">Cartes</a
                 ><a href="">Contact</a>
@@ -28,7 +28,7 @@
       <main>
         <div class="intro">
           <div class="row">
-            <div class="col-12 col-lg-6 offset-lg-3">
+            <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
               <h1>TerreMere</h1>
               <p>
                 Ce restaurant offre une aventure gastronomique préparée par une
@@ -40,7 +40,7 @@
           </div>
           <div class="nav">
             <div class="row">
-              <div class="col-12 col-lg-3">
+              <div class="col-12 col-md-3">
                 <div class="country">
                   <img
                     src="img/france/french-nav.jpg"
@@ -49,52 +49,73 @@
                   <div class="country-title">France</div>
                 </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/japon/japanese-nav.jpeg"
-                  alt="picture of a dish from Japan"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <div class="country-title">Japon</div>
+                  <img
+                    src="img/japon/japanese-nav.jpeg"
+                    alt="picture of a dish from Japan"
+                  />
+                </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/éthiopie/ethiopian-nav.jpeg"
-                  alt="picture of a dish from Ethiopia"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <img
+                    src="img/éthiopie/ethiopian-nav.jpeg"
+                    alt="picture of a dish from Ethiopia"
+                  />
+                  <div class="country-title">Ethiopie</div>
+                </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/grèce/greek-nav.jpg"
-                  alt="picture of a dish from Greece"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <div class="country-title">Grèce</div>
+                  <img
+                    src="img/grèce/greek-nav.jpg"
+                    alt="picture of a dish from Greece"
+                  />
+                </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/mexique/mexican-nav.jpg"
-                  alt="picture of a dish from Mexico"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <img
+                    src="img/mexique/mexican-nav.jpg"
+                    alt="picture of a dish from Mexico"
+                  />
+                  <div class="country-title">Mexique</div>
+                </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/liban/libanese-nav.jpg"
-                  alt="picture of a dish from Lebanon"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <div class="country-title">Liban</div>
+                  <img
+                    src="img/liban/libanese-nav.jpg"
+                    alt="picture of a dish from Lebanon"
+                  />
+                </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/maroc/moroccan-nav.jpg"
-                  alt="picture of a dish from Morocco"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <img
+                    src="img/maroc/moroccan-nav.jpg"
+                    alt="picture of a dish from Morocco"
+                  />
+                  <div class="country-title">Maroc</div>
+                </div>
               </div>
-              <div class="col-12 col-lg-3">
-                <img
-                  src="img/inde/indian-nav.jpg"
-                  alt="picture of a dish from India"
-                />
+              <div class="col-12 col-md-3">
+                <div class="country">
+                  <div class="country-title">Inde</div>
+                  <img
+                    src="img/inde/indian-nav.jpg"
+                    alt="picture of a dish from India"
+                  />
+                </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-lg-6 offset-lg-3">
+            <div class="col-12 col-md-6 offset-md-3">
               <p>
                 Nos menus contiennent aussi des plats végétariens et végans. En
                 cas d’allergies ou de régime alimentaire particulier nous vous
@@ -147,9 +168,9 @@
       </main>
       <footer>
         <div class="row">
-          <div class="col-12 col-lg-6">Réservation</div>
-          <div class="col-12 col-lg-6 order-lg-1">Contact</div>
-          <div class="col-2 offset-5 order-lg- 2">Credit</div>
+          <div class="col-12 col-md-6">Réservation</div>
+          <div class="col-12 col-md-6 order-md-1">Contact</div>
+          <div class="col-2 offset-5 order-md- 2">Credit</div>
         </div>
       </footer>
     </div>
