--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
                 <a href="">Accueil</a><a href="">Cartes</a
                 ><a href="">Contact</a>
               </div>
+              <div class="burger-menu">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="46"
+                  height="25"
+                  viewBox="0 0 46 25"
+                  fill="none"
+                >
+                  <path
+                    d="M1 3.5C2 3 3 1 5 1C7 1 7 6 9 6C11 6 11 1 13 1C15 1 15 6 17 6C19 6 19 1 21 1C23 1 23 6 25 6C27 6 27 1 29 1C31 1 31 6 33 6C35 6 35 1 37 1C39 1 39 6 41 6C43 6 43 1 45 1"
+                    stroke="#FCB7ED"
+                  />
+                  <path
+                    d="M1 14C2 13 3 11 5 11C7 11 7 14 9 14C11 14 11 11 13 11C15 11 15 14 17 14C19 14 19 11 21 11C23 11 23 14 25 14C27 14 27 11 29 11C31 11 31 14 33 14C35 14 35 11 37 11C39 11 39 14 41 14C43 14 43.5 12.5 45 11"
+                    stroke="#FCB7ED"
+                  />
+                  <path
+                    d="M1 21.5C2 21 3 19 5 19C7 19 7 24 9 24C11 24 11 19 13 19C15 19 15 24 17 24C19 24 19 19 21 19C23 19 23 24 25 24C27 24 27 19 29 19C31 19 31 24 33 24C35 24 35 19 37 19C39 19 39 24 41 24C43 24 43 19 45 19"
+                    stroke="#FCB7ED"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
         </div>
