--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12">France title</div>
+          <div class="col-12">
+            <div class="title">
+              <h2>France</h2>
+              <img src="img/france/french-food-4.jpeg" alt="" />
+            </div>
+          </div>
           <div class="col-12">France button</div>
           <div class="col-12">France text</div>
         </div>
