add class to img into france's menu

--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
           <div class="col-12">
             <div class="title">
               <h2>France</h2>
-              <img src="img/france/french-food-4.jpeg" alt="" />
+              <img
+                src="img/france/french-food-4.jpeg"
+                class="menu-img"
+                alt=""
+              />
             </div>
           </div>
           <div class="col-12">France button</div>
