--- a/index.html
+++ b/index.html
@@ -151,14 +151,17 @@
           <div class="col-12">
             <div class="title">
               <h2>France</h2>
-              <img
-                src="img/france/french-food-4.jpeg"
-                class="menu-img"
-                alt=""
-              />
+              <img src="img/france/french-food-4.jpeg" alt="" />
             </div>
           </div>
-          <div class="col-12">France button</div>
+          <div class="col-12">
+            <div class="button">
+              <img src="img/france/french-food-2.jpeg" alt="" />
+              <div class="center">
+                <div class="button-menu">Voir le menu</div>
+              </div>
+            </div>
+          </div>
           <div class="col-12">France text</div>
         </div>
         <div class="row">
