big change section

--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-12 col-lg-6">france</div>
+          <div class="col-12 col-lg-6 order-lg-2">intro</div>
+          <div class="col-12 col-lg-6">img1</div>
+          <div class="col-12 col-lg-6 order-lg-1">voir le menu</div>
+          <div class="col-12 col-lg-6">img2</div>
+          <div class="col-12 col-lg-6 order-lg-2">img3</div>
+        </div>
+        <div class="row">
           <div class="col-12">
             <div class="title">
               <h2>France</h2>
@@ -162,7 +170,21 @@
               </div>
             </div>
           </div>
-          <div class="col-12">France text</div>
+          <div class="col-12">
+            <div class="text">
+              <div class="text-part">
+                <p>
+                  La cuisine française, c'est l'art de la perfection. Découvrez
+                  des plats élaborés avec précision, des vins exquis et une
+                  ambiance chaleureuse. 
+                </p>
+                <img src="img/france/french-food-1.jpeg" alt="" />
+              </div>
+              <div class="img-part">
+                <img src="img/france/french-food-3.jpeg" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
         <div class="row">
           <div class="col-12">Japon title</div>
