--- a/index.html
+++ b/index.html
@@ -147,45 +147,39 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-lg-6">france</div>
-          <div class="col-12 col-lg-6 order-lg-2">intro</div>
-          <div class="col-12 col-lg-6">img1</div>
-          <div class="col-12 col-lg-6 order-lg-1">voir le menu</div>
-          <div class="col-12 col-lg-6">img2</div>
-          <div class="col-12 col-lg-6 order-lg-2">img3</div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <div class="title">
-              <h2>France</h2>
-              <img src="img/france/french-food-4.jpeg" alt="" />
+        <section>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="title"><h2>France</h2></div>
             </div>
-          </div>
-          <div class="col-12">
-            <div class="button">
-              <img src="img/france/french-food-2.jpeg" alt="" />
-              <div class="center">
-                <div class="button-menu">Voir le menu</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12">
-            <div class="text">
+            <div class="col-12 col-md-6 order-md-2">
               <div class="text-part">
                 <p>
                   La cuisine française, c'est l'art de la perfection. Découvrez
                   des plats élaborés avec précision, des vins exquis et une
-                  ambiance chaleureuse. 
+                  ambiance chaleureuse.
                 </p>
                 <img src="img/france/french-food-1.jpeg" alt="" />
               </div>
-              <div class="img-part">
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="img/france/french-food-4.jpeg" alt="" />
+            </div>
+            <div class="col-12 col-md-6 order-md-1">
+              <div class="center">
+                <div class="button-menu">Voir le menu</div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="img/france/french-food-2.jpeg" alt="" />
+            </div>
+            <div class="col-12 col-md-6 order-md-2">
+              <div class="img-height">
                 <img src="img/france/french-food-3.jpeg" alt="" />
               </div>
             </div>
           </div>
-        </div>
+        </section>
         <div class="row">
           <div class="col-12">Japon title</div>
           <div class="col-12">Japon button</div>
